<resources>
    <string name="app_name">DermoApp</string>
    <string name="logo_dermoapp_fondo_transparente">DermoApp logo transparent background</string>
    <string name="cargando">Charging…</string>
    <string name="rationale_write_storage">This application needs access to your files so that it can send information</string>
    <string name="rationale_camera">This app needs access to your camera so you can take pictures</string>
    <string name="rationale_default">This app requires additional permission</string>
    <string name="permisos_denegados">You must authorize all permissions to continue</string>
    <string name="sin_conexion">You must have internet to continue</string>
    <string name="cerrar">CLOSE</string>
    <string name="actualizacion_cancelada">Update canceled by user!</string>
    <string name="actualizacion_exitosa">Successful update!</string>
    <string name="actualizacion_fallida">Update failed!</string>
    <string name="on_permissions_granted">onPermissionsGranted:</string>
    <string name="double_point">:</string>
    <string name="permission_denied">onPermissionsDenied:</string>
    <string name="te_damos_la_bienvenida">We given you welcome</string>
    <string name="ingles">English (United States)</string>
    <string name="espanol">Spanish (Colombia)</string>
    <string name="app_slogan">The site to access tele-consultation services</string>
    <string name="caratula_1">Icon of a doctor</string>
    <string name="crearCuenta">Create your account</string>
    <string name="IniciarSesion">Log in</string>
    <string name="Icono_back">Back icon</string>
    <string name="correo_electronico">Email</string>
    <string name="contraseña">Password</string>
    <string name="ver_u_ocultar_contra">Icon to hide password</string>
    <string name="confirmar_contraseña">Confirm Password</string>
    <string name="ocultar_confirmacion_contra">Icon to show password</string>
    <string name="terminos_y_condiciones">By registering, you agree to the terms and conditions of use.</string>
    <string name="continuar">Sign up</string>
    <string name="ya_tienes_cuenta">Already have an account?</string>
    <string name="el_campo_esta_vacio">The field is emptyo</string>
    <string name="espacio">" "</string>
    <string name="ingrese_un_correo_valido">Enter a valid email</string>
    <string name="debe_ser_mayor_a">"Must be greater than "</string>
    <string name="caracteres">" characters"</string>
    <string name="las_contrasenas_no_coinciden">Passwords do not match</string>
    <string name="creaandoTuCuenta">Creating your account…</string>
    <string name="cuenta_creada_con_exito">Your account has been created successfully</string>
    <string name="cuenta_ya_existente">There is already an account with that email</string>
    <string name="error_inesperado">An error has occurred, please try again later</string>
    <string name="hola">Hello!</string>
    <string name="olvidocontra">Did you forget your password?</string>
    <string name="no_estas_registrado">Still not registered?</string>
    <string name="validandoTusCredenciales">Validating your credentials…</string>
    <string name="credencialesValidas">Valid credentials</string>
    <string name="noExisteUnaCuenta">There is no account with this email</string>
    <string name="credencialesInvalidas">The credentials are invalid</string>
    <string name="bienvenido_a_dermoapp">Welcome to DermoApp</string>
    <string name="para_continuar_se_requiere_conocer_tu_perfil_por_favor_ingresa_los_siguientes_datos">To continue it is required to know your profile, please enter the following information:</string>
    <string name="nombre">Name</string>
    <string name="edad_a_os">Age (years)</string>
    <string name="ciudad_o_municipio">City</string>
    <string name="continue_dos">Continue</string>
    <string name="laEdadDebeSerMayorACero">You must be of legal age</string>
    <string name="invalidaCiudad">Select a city from the list</string>
    <string name="configurandoTuPerfilDeUsuario">Setting up your user profile…</string>
    <string name="configuracionExitosa">Successful configuration</string>
    <string name="importante">IMPORTANT</string>
    <string name="cerrarSesion">Are you sure you want to log out?</string>
    <string name="no">NOT</string>
    <string name="si">YES</string>
    <string name="perfil_dermatol_gico">Dermatological profile</string>
    <string name="adicionalmente_dermoapp_requiere_conocer_tu_tipo_de_piel_y_una_foto_de_tu_estado_actual">Additionally, DermoApp requires knowing your skin type and a photo of your current state</string>
    <string name="agregar_foto">Add photo&#160;&#160;</string>
    <string name="imagen_tipo_de_piel">Image skin type</string>
    <string name="configurandoPerfilDermatologico">Adding dermatological profile…</string>
    <string name="seleccion_tipo_piel">Type of kin</string>
    <string name="separador">&#160;-&#160;</string>
    <string name="problemas_almacenamiento_imagen">Our system has an error, please try again later</string>
    <string name="agregadoConExito">Added successfully</string>
    <string name="servicios_disponibles">Available services</string>
    <string name="a_continuaci_n_puede_seleccionar_el_servicio_de_su_inter_s">Below you can select the service of your interest:</string>
    <string name="lesiones">Injuries</string>
    <string name="diagn_stico">Diagnosis</string>
    <string name="en_esta_secci_n_se_puede_visualizar_las_lesiones_dermatol_gicas_reportadas_en_la_aplicaci_n">In this section you can view the dermatological lesions reported in the application:</string>
    <string name="agregar_lesi_n">Add lesion</string>
    <string name="actualmente_no_se_ha_registrado_ninguna_lesi_n_dermatol_gica">Currently, no dermatological lesion has been registered</string>
    <string name="lesi_n_registrada_el">Injury recorded on:&#160;</string>
    <string name="ver_informaci_n">See information&#160;&#160;</string>
    <string name="lesi_n_dermatol_gica">Skin injury</string>
    <string name="el_sistema_le_solicitara_una_informaci_n_para_determinar_el_tipo_de_lesi_n_dermatol_gica_presentada_y_ser_m_s_efectivos_en_el_diagn_stico">The system will request information to determine the type of dermatological lesion presented and be more effective in the diagnosis.</string>
    <string name="_1_tipo_de_lesi_n">1. Type of injury:</string>
    <string name="p_pula">Papule</string>
    <string name="m_cula">Taint</string>
    <string name="parche">Patch</string>
    <string name="placa">Plate</string>
    <string name="n_dulo">Nodule</string>
    <string name="ampolla">Blister</string>
    <string name="lcera">Sore</string>
    <string name="ves_cula">Vesicle</string>
    <string name="messageCloseType">This action will not store any information about the injury. Are you sure you want to exit?</string>
    <string name="_2_forma_de_la_lesi_n">2. Form of the lesion:</string>
    <string name="anillo">Ring</string>
    <string name="domo">Dome</string>
    <string name="ovalada">Oval</string>
    <string name="redonda">Round</string>
    <string name="indefinida">Indefinite</string>
    <string name="enrollada">Rolled up</string>
    <string name="_3_n_mero_de_lesiones">3. Number of injuries:</string>
    <string name="solitaria">Lonely</string>
    <string name="m_ltiple">Multiple</string>
    <string name="recurrente">Recurrent</string>
    <string name="diseminada">Disseminated</string>
    <string name="_4_distribuci_n">4. Distribution:</string>
    <string name="asim_trica">Asymmetric</string>
    <string name="confluente">Confluent</string>
    <string name="sim_trica">Symmetric</string>
    <string name="esparcida">Scattered</string>
    <string name="_5_fotograf_a_de_la_lesi_n">5. Photograph of the injury:</string>
    <string name="creando_lesion_dermatologica">Creating dermatological lesion…</string>
    <string name="creada_lesion_exito">The lesion has been successfully created</string>
</resources>