<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vModel"
            type="com.miso.dermoapp.ui.core.home.viewModels.WelcomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_contain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/background_welcome"
        tools:context=".ui.core.home.views.Welcome">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@mipmap/ic_white_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.10"
            android:contentDescription="@string/logo_dermoapp_fondo_transparente" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/helveticaltsdbold"
            android:text="@string/app_name"
            android:textSize="45sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helveticaltstdroman"
            android:gravity="center"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/app_slogan"
            android:textColor="@color/blue_dark"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@mipmap/doctor"
            android:contentDescription="@string/caratula_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/localizacion"
            android:layout_marginEnd="15dp"
            app:layout_constraintEnd_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            android:contentDescription="@string/caratula_1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/calendario"
            android:layout_marginStart="15dp"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            android:contentDescription="@string/caratula_1" />

        <Button
            android:id="@+id/ButtonCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/boton_oscuro"
            android:fontFamily="@font/helveticaltsdbold"
            android:text="@string/crearCuenta"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonCollector"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonCollector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helveticaltsdbold"
            android:background="@drawable/boton_transparente"
            android:text="@string/IniciarSesion"
            android:textAllCaps="false"
            android:textColor="@color/blue_dark"
            android:textSize="18sp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>