<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vModel"
            type="com.miso.dermoapp.ui.core.injury.viewModels.PhotoOfInjuryViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_contain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/background_sign_up"
        tools:context=".ui.core.injury.views.PhotoOfInjury">

        <ImageView
            android:id="@+id/imageViewBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/ic_back_arrow"
            android:contentDescription="@string/Icono_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlCompat,RtlSymmetry" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/helveticaltsdbold"
                android:gravity="center_horizontal"
                android:text="@string/lesi_n_dermatol_gica"
                android:textColor="@color/blue_dark"
                android:textSize="30sp"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/textViewSubTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/helveticaltstdroman"
                android:gravity="left"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/el_sistema_le_solicitara_una_informaci_n_para_determinar_el_tipo_de_lesi_n_dermatol_gica_presentada_y_ser_m_s_efectivos_en_el_diagn_stico"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
                tools:ignore="RtlHardcoded" />

            <LinearLayout
                android:id="@+id/separator"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                android:background="@color/blue_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewSubTitle"/>

            <TextView
                android:id="@+id/textViewSubTitleCap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/helveticaltsdbold"
                android:gravity="left"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/_5_fotograf_a_de_la_lesi_n"
                android:textColor="@color/blue_dark"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/separator"
                tools:ignore="RtlHardcoded" />

            <ImageView
                android:id="@+id/imageViewPhoto"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginTop="50dp"
                android:background="@mipmap/ic_empty_photo"
                android:contentDescription="@string/imagen_tipo_de_piel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewSubTitleCap" />

            <Button
                android:id="@+id/buttonAddPhoto"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="@drawable/boton_transparente"
                android:drawableEnd="@drawable/ic_camera"
                android:ellipsize="marquee"
                android:fontFamily="@font/helveticaltstdroman"
                android:gravity="center_horizontal|center_vertical"
                android:marqueeRepeatLimit="marquee_forever"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:text="@string/agregar_foto"
                android:onClick="@{() -> vModel.AddPhoto()}"
                android:textAllCaps="false"
                android:textColor="@color/blue_dark"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewPhoto" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/buttonContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/boton_oscuro_disabled"
            android:fontFamily="@font/helveticaltsdbold"
            android:text="@string/continue_dos"
            android:onClick="@{() -> vModel.ContinueAddInjury()}"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>