<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="vModel"
            type="com.miso.dermoapp.ui.core.home.viewModels.SplashViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_contain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_lanch"
        tools:context=".ui.core.home.views.Splash">

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@mipmap/ic_white_logo"
            android:layout_marginBottom="30dp"
            android:contentDescription="@string/logo_dermoapp_fondo_transparente"
            app:layout_constraintBottom_toTopOf="@+id/textViewNameApp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewNameApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helveticaltsdbold"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="60sp"
            android:layout_marginBottom="-50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/helveticaltsdbold"
            android:text="@{vModel.version}"
            android:textColor="@color/white_70"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageViewLoading"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@mipmap/ic_loading"
            android:contentDescription="@string/cargando"
            app:layout_constraintBottom_toTopOf="@+id/textViewVersion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>